增加webSocket 实时聊天系统

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,14 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-websocket</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-messaging</artifactId>
+        </dependency>
 
         <!--代码生成器-->
         <dependency>
